[package]
name = "adventofcode_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
aoc-next = "0.1.0"
itertools = "0.12.0"
num = "0.4.1"
rustc-hash = "1.1.0"
winnow = "0.5.19"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"

[profile.release]
lto = true        # Link-time optimization.
codegen-units = 1 # Slower compilation but faster code.
