[package]
name = "adventofcode_2023"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
aoc-next = "0.1.0"
itertools = "0.12.0"
memoize = { git = "https://github.com/dermesser/memoize" }
num = "0.4.1"
once_cell = "1.19.0"
pathfinding = "4.8.0"
ranges = "0.3.3"
regex = "1.10.2"
rustc-hash = "1.1.0"
winnow = "0.5.31"

[dev-dependencies]
indoc = "2.0.4"
pretty_assertions = "1.4.0"

[profile.release]
lto = true        # Link-time optimization.
codegen-units = 1 # Slower compilation but faster code.
